--- a/ReactNativeExample/package.json
+++ b/ReactNativeExample/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^18.2.15",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
+    "@react-native/metro-config": "^0.73.0",
     "babel-jest": "^29.6.1",
     "eslint": "^8.45.0",
     "jest": "^29.6.1",
