--- a/ReactNativeExample/package.json
+++ b/ReactNativeExample/package.json
@@ -12,24 +12,27 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
+    "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-gradle-plugin": "0.71.19",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
-    "react-native-vector-icons": "^10.0.0",
-    "react-native-gradle-plugin": "0.71.19"
+    "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "@babel/runtime": "^7.22.6",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native/metro-config": "^0.73.0",
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.3",
     "@types/react": "^18.2.15",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
-    "@react-native/metro-config": "^0.73.0",
     "babel-jest": "^29.6.1",
     "eslint": "^8.45.0",
     "jest": "^29.6.1",
